2006-02-10  Martin Hunt  <hunt@redhat.com>

	* copy.c (_stp_copy_from_user): Revert previous incorrect change.

2006-02-09  Martin Hunt  <hunt@redhat.com>

	* copy.c (_stp_copy_from_user): If access fails,
	return -1.

2006-01-25  Martin Hunt  <hunt@redhat.com>

	* stat.c (_stp_stat_init): Use _stp_alloc_percpu().
	(_stp_stat_del): New function.

	* alloc.c (_stp_alloc_percpu): New function.
	(_stp_free_percpu): New function.

2006-01-19  Martin Hunt  <hunt@redhat.com>

	* pmap-gen.c (_stp_pmap_get): Fix bug where old data
	from agg map could be returned after element was deleted.

2006-01-16  Josh Stone  <joshua.i.stone@intel.com>

	* stat.c (_stp_stat_clear): add a function that just
	clears a Stat, so we can use delete in the translator.

2006-01-16  Martin Hunt  <hunt@redhat.com>

	* map.c (_stp_pmap_agg): Return NULL when aggregation
	fails.

2006-01-15  Frank Ch. Eigler  <fche@elastic.org>

	* io.c (_stp_exit): Revert.

2006-01-10  Martin Hunt  <hunt@redhat.com>

	* io.c (_stp_exit): set STAP_SESSION_STOPPING.

2006-01-03  Frank Ch. Eigler  <fche@redhat.com>

	* io.c (_stp_softerror): New function.

2005-12-14  Martin Hunt  <hunt@redhat.com>

	* pmap-gen.c (_stp_pmap_new_*): Initialize lock.
	(_stp_pmap_set_*): Lock map while in use.
	(_stp_pmap_add_*): Lock map while in use.	
	(_stp_pmap_get_cpu): Ditto.
	(_stp_pmap_get): Lock each per-cpu map.
	
	* map-gen.c: Define and use NULLRET for a NULL return value.
	* map.c (_stp_pmap_clear): New function.
	(_stp_pmap_agg): Lock each per-cpu map as
	it gets aggregated.

2005-12-13  Martin Hunt  <hunt@redhat.com>

	* map.c (_stp_map_sortn): Set a limit of 30 for n.  Automatically
	call _stp_map_sort() if more is requested.

2005-12-08  Martin Hunt  <hunt@redhat.com>

	* map.c (_new_map_create): Only increment map size if a node
	was moved off the free list.
	(_stp_map_size): New function.
	(_stp_pmap_size): New function.	

2005-12-07  Martin Hunt  <hunt@redhat.com>
	 PR1923
	* map.h (struct map_root): Remove membuf.