@@ -1,0 +1,7 @@
+all: itest
+
+itest: itest.c
+	gcc -Wall -O3 -o itest itest.c
+
+clean:
+	/bin/rm -f itest
