@@ -1,0 +1,26 @@
+This is a framework for profiling systemtap scripts and the
+underlying runtime functions.
+
+To try the tests:
+>make
+./run_bench
+./stap_bench
+
+You will need ruby installed. "yum install ruby" or "up2date ruby" to get it.
+
+---- FILES ----
+a.st - sample script test file
+b.st - sample script test file
+
+itest.c - used by tests. Type "make" to build
+Makefile - makefile for itest
+
+run_bench - test driver with some test scripts. Tests may
+be supplied in files (as in a.st and b.st) or in strings, as
+in this example.
+
+stap_bench - test driver that tests all files ending in ".st"
+
+bench.rb - bench classes used by drivers.
+
+results.txt - Some results of "run_bench" on different machines.
